# soul_cave

./: .clang-format  .gitignore  CMakeLists.txt  setup.sh
assets/levels/: level_01.txt  level_02.txt  level_03.txt  level_04.txt  level_05.txt
assets/sounds/: Music_Attribution.txt
src/: game_types.h  globals.h  level.c  level.h  main.c  object.c  object.h  player.c  player.h  renderer.c  renderer.h
src/core/: arena.c  arena.h  hash_table.c  hash_table.h  logger.c  logger.h
